# fheroes2

./: .clang-format  .clang-tidy  .codechecker-ignore  .codechecker-review-status-config  .directory  .gitignore  .markdownlint-cli2.jsonc  .travis.yml  82m2wav.vcxproj  CMakeLists.txt  CONTRIBUTING.md  Debug.props  Dockerfile  Makefile  Makefile.dolce  Makefile.emscripten  Makefile.morphos  Makefile.n3ds  Makefile.switch  Makefile.vita  Makefile.web  README.md  README.txt  Release.props  SDL1.props  SDL2.props  appveyor.yml  bin2txt.vcxproj  changelog.txt  common.props  docker.sh  download_demo_version.ps1  extractor.vcxproj  fheroes2-vs2015.vcxproj  fheroes2-vs2017.vcxproj  fheroes2-vs2019.vcxproj  fheroes2.cfg  fheroes2.info  fheroes2.iss  fheroes2.key  (+12 more)
editor/: CMakeLists.txt  README  dialogs.cpp  dialogs.h  engine.cpp  engine.h  fh2editor.pro  global.cpp  global.h  mainwindow.cpp  mainwindow.h  mapdata.cpp  mapdata.h  mapwindow.cpp  mapwindow.h  program.cpp  program.h  resources.qrc
files/lang/: CMakeLists.txt  Makefile  be.po  bg.po  cs.po  da.po  de.po  dk.po  el.po  eo.po  es.po  es.po.invalid  fheroes2.pot  fr.po  gr.po  hu.po  it.po  lt.po  nb.po  nl.po  pl.po  pt.po  ro.po  ru.po  sk.po  sv.po  testy.txt  tr.po  ua.po  uk.po  vi.po  zh_CN.po  zh_TW.po
files/lang/Ny mappe/: dk.po  it.po  nl.po  sv.po
files/lang/unfmtmo/: hu.txt
files/lang/Нова папка/: uk.po
python/: CMakeLists.txt  README.md  pyfheroes2.cpp  test_bindings.py
python/pyfheroes2/: __init__.py
src/: CMakeLists.txt  Makefile  Makefile.all  Makefile.bsd  Makefile.dolce  Makefile.mingw  Makefile.mingw32  Makefile.mingw32ce  Makefile.morphos  Makefile.osx  Makefile.switch  Makefile.vita
src/engine/: CMakeLists.txt  IMG_savepng.cpp  IMG_savepng.h  Makefile  agg_file.cpp  agg_file.h  audio.cpp  audio.h  audio_cdrom.cpp  audio_cdrom.h  audio_mixer.cpp  audio_mixer.h  audio_music.cpp  audio_music.h  audio_xmi2mid.cpp  bitwise_enum.h  char_encoding.cpp  char_encoding.h  core.cpp  core.h  dir.cpp  dir.h  display.cpp  display.h  endian.h  endian_h2.h  engine.cpp  engine.h  error.cpp  error.h  exception.h  font.cpp  font.h  h2d_file.cpp  h2d_file.h  icn_decode.cpp  icn_decode.h  image.cpp  image.h  image_color_conversion.cpp  (+64 more)
src/fheroes2/: CMakeLists.txt
src/fheroes2/agg/: agg.cpp  agg.h  agg_image.cpp  agg_image.h  bin_frm.cpp  bin_frm.h  bin_info.cpp  bin_info.h  decode.cpp  decode.h  icn.cpp  icn.h  m82.cpp  m82.h  mus.cpp  mus.h  pal.cpp  pal.h  sprite.cpp  sprite.h  til.cpp  til.h  xmi.cpp  xmi.h
src/fheroes2/ai/: ai.h  ai_action.cpp  ai_base.cpp  ai_battle.cpp  ai_battle.h  ai_battle_spell.cpp  ai_common.cpp  ai_common.h  ai_hero_action.cpp  ai_hero_action.h  ai_personality.cpp  ai_personality.h  ai_planner.cpp  ai_planner.h  ai_planner_castle.cpp  ai_planner_hero.cpp  ai_planner_internals.h  ai_planner_kingdom.cpp
src/fheroes2/army/: army.cpp  army.h  army_bar.cpp  army_bar.h  army_troop.cpp  army_troop.h  army_ui_helper.cpp  army_ui_helper.h
src/fheroes2/audio/: audio_manager.cpp  audio_manager.h
src/fheroes2/battle/: battle.h  battle_action.cpp  battle_animation.cpp  battle_animation.h  battle_arena.cpp  battle_arena.h  battle_army.cpp  battle_army.h  battle_board.cpp  battle_board.h  battle_bridge.cpp  battle_bridge.h  battle_catapult.cpp  battle_catapult.h  battle_cell.cpp  battle_cell.h  battle_command.cpp  battle_command.h  battle_dialogs.cpp  battle_grave.cpp  battle_grave.h  battle_interface.cpp  battle_interface.h  battle_interface_settings.cpp  battle_interface_settings.h  battle_main.cpp  battle_only.cpp  battle_only.h  battle_pathfinding.cpp  battle_pathfinding.h  battle_tower.cpp  battle_tower.h  battle_troop.cpp  battle_troop.h
src/fheroes2/campaign/: campaign_data.cpp  campaign_data.h  campaign_savedata.cpp  campaign_savedata.h  campaign_scenariodata.cpp  campaign_scenariodata.h
src/fheroes2/castle/: buildinginfo.cpp  buildinginfo.h  captain.cpp  captain.h  castle.cpp  castle.h  castle_building.cpp  castle_building_info.cpp  castle_building_info.h  castle_dialog.cpp  castle_heroes.h  castle_mageguild.cpp  castle_tavern.cpp  castle_town.cpp  castle_ui.cpp  castle_ui.h  castle_well.cpp  mageguild.cpp  mageguild.h  marketplace.h
src/fheroes2/dialog/: dialog.h  dialog_adventure.cpp  dialog_arena.cpp  dialog_armyinfo.cpp  dialog_artifact.cpp  dialog_audio.cpp  dialog_audio.h  dialog_box.cpp  dialog_buyboat.cpp  dialog_castle_details.cpp  dialog_castle_details.h  dialog_chest.cpp  dialog_file.cpp  dialog_frameborder.cpp  dialog_game_settings.cpp  dialog_game_settings.h  dialog_gameinfo.cpp  dialog_giftresources.cpp  dialog_graphics_settings.cpp  dialog_graphics_settings.h  dialog_guardian.cpp  dialog_hotkeys.cpp  dialog_hotkeys.h  dialog_interface_settings.cpp  dialog_interface_settings.h  dialog_language_selection.cpp  dialog_language_selection.h  dialog_levelup.cpp  dialog_marketplace.cpp  dialog_message.cpp  dialog_quickinfo.cpp  dialog_random_map.cpp  dialog_random_map.h  dialog_random_map_generator.cpp  dialog_recruit.cpp  (+19 more)
src/http-launcher/: launcher.js  package-lock.json  package.json
src/resources/: Info.plist.in  fheroes2.icns  fheroes2.rc
src/tools/: 82m2wav-vs2015.vcxproj  82m2wav-vs2017.vcxproj  82m2wav-vs2019.vcxproj  82m2wav.cpp  82m2wav.vcxproj  CMakeLists.txt  Makefile  README  bin2txt-vs2015.vcxproj  bin2txt-vs2017.vcxproj  bin2txt-vs2019.vcxproj  bin2txt.cpp  bin2txt.vcxproj  cdinfo.py  extractor-vs2015.vcxproj  extractor-vs2017.vcxproj  extractor-vs2019.vcxproj  extractor.cpp  extractor.vcxproj  h2dmgr-vs2019.vcxproj  h2dmgr.cpp  icn2img-vs2015.vcxproj  icn2img-vs2017.vcxproj  icn2img-vs2019.vcxproj  icn2img.cpp  icn2img.vcxproj  music_wrapper.sh  pal2img-vs2017.vcxproj  pal2img-vs2019.vcxproj  pal2img.cpp  palette_h2.h  til2img-vs2015.vcxproj  til2img-vs2017.vcxproj  til2img-vs2019.vcxproj  til2img.cpp  til2img.vcxproj  xmi2mid-vs2015.vcxproj  xmi2mid-vs2017.vcxproj  xmi2mid-vs2019.vcxproj  xmi2mid.cpp  (+5 more)
src/xmlccwrap/: Makefile  gzstream.cpp  gzstream.h  tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp  xmlccwrap.h
(+1021 files in other folders)
